--- a/games.css
+++ b/games.css
@@ -2,7 +2,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background: url(images/panic.jpg) center;
+  background: url(images/diceimage.jpg) center;
 }
 h1 {
   font-family: "Lobster", cursive;
